# Gatherly

./: .env.production.example  .gitignore  README.md  docker-compose.yml  package-lock.json  watch-package-json.sh
Authentication/: Dockerfile  docker-compose.dev.yml  pyproject.toml
Authentication/app/: crud.py  grpc_server.py  main.py  models.py  utils.py
Authentication/app/api/: auth_pb2_grpc.py  deps.py  main.py
Authentication/app/api/routes/: __init__.py  dashboard.py  login.py
Authentication/app/core/: config.py  dev_ui.py  security.py
Authentication_Microservice/Authentication/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
Authentication_Microservice/Authentication/app/: crud.py  grpc_server.py  main.py  models.py  utils.py
Authentication_Microservice/Authentication/app/core/: config.py  db.py  security.py  wait_for_postgres.py
Authentication_Microservice/Authentication/app/services/: auth_pb2_grpc.py  wait_for_postgres.py
Authentication_Microservice/Authentication/proto/: auth.proto
Event/: docker-compose.dev.yml  pyproject.toml
Event/app/: crud.py  main.py  models.py  utils.py
Event/app/api/: auth_pb2.py  deps.py  main.py
Event/app/api/routes/: __init__.py  events.py  members.py  reminders.py
Event/app/core/: celery_config.py  config.py  db.py
Event/app/services/: wait_for_postgres.py  wait_for_redis.py
Event/app/tasks/: __init__.py
Event_Microservice/Event/: Dockerfile  pyproject.toml
Event_Microservice/Event/app/: crud.py  main.py  models.py  utils.py
Event_Microservice/Event/app/api/: auth_pb2.py  main.py
Event_Microservice/Event/app/api/routes/: __init__.py  events.py  members.py  reminders.py
Event_Microservice/Event/app/core/: celery_config.py  dev_ui.py
Event_Microservice/Event/app/tasks/: __init__.py
Event_Microservice/Event/proto/: auth.proto
Frontend/gatherly/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
Frontend/gatherly/src/: App.css  App.jsx  axiosInstance.jsx  constant.js
Frontend/gatherly/src/components/: DeleteEvent.jsx  DeleteReminder.jsx  EventCard.jsx  EventCardWithoutJoin.jsx  LoginComp.jsx  Navbar.jsx  ProtectedRoute.jsx  Registration.jsx  Remindercard.jsx  chats.jsx  navbarheights.jsx
Videochat/: Dockerfile  pyproject.toml
Videochat/app/: crud.py  main.py  models.py  utils.py
Videochat/app/core/: config.py  db.py  dev_ui.py  manager.py
Videochat_Microservice/: README.md
Videochat_Microservice/Videochat/: pyproject.toml
Videochat_Microservice/Videochat/app/: crud.py  main.py  models.py  utils.py
Videoservice/: Dockerfile  docker-compose.dev.yml  docker-compose.yaml  hello.py  pyproject.toml
Videoservice/app/: main.py
Videoservice/app/templates/: index.html  room.html
frontend/gatherly/: Dockerfile  index.html  package-lock.json  package.json
frontend/gatherly/src/: App.jsx  EventCard.css  Room.css  constant.js
gatherly/: package-lock.json  package.json
gatherly/public/: index.html
gatherly/src/: App.js  index.js  theme.js
gatherly/src/components/: ChatSection.jsx  EventsPage.jsx  HomePage.jsx  LoginPage.jsx  MainLayout.jsx  Navbar.jsx  Notifications.jsx  Sidebar.jsx  VideoCallSection.jsx
gatherly/src/services/: api.js
gatherly/src/styles/: app.css
(+26 files in other folders)
