[project]
name = "videoservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.9",
    "fastapi[standard]>=0.115.5",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]
